
syntax = "proto3";

option csharp_namespace = "CardService";

package BusinessCardApi;

service KardGrpc {
    rpc ExportCardsGrpc(ExportCardsGrpcCommand) returns (ExportCardsGrpcCommandResult) {}
    rpc DownloadUrlsGrpc(DownloadUrlsGrpcCommand) returns (DownloadUrlsGrpcCommandResult) {}
}

message ExportCardsGrpcCommand {
    string clientId = 1;
    int32 count = 2;
}

message ExportCardsGrpcCommandResult {
    repeated string urls = 1;
}

message DownloadUrlsGrpcCommand {
    string clientId = 1;
}

message DownloadUrlsGrpcCommandResult {
    repeated string urls = 1;
}
